--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,24 @@
 header {
     z-index: 1;
 }
+
+hr {
+    border: none;
+    height: 3px;
+    width: 80px;
+    background-color: black;
+
+}
+
+body {
+    color: #9CAFC3;
+}
+hr.grayscale {
+
+    background-color: #9CAFC3;
+
+}
+
 .row {
     margin-right: 0;
     margin-left: 0;
@@ -40,7 +58,7 @@ header {
     top: 0;
 
     bottom:0;
-    background: rgba(52, 52, 54, 0.4);
+    /*background: rgba(52, 52, 54, 0.4);*/
 
     padding-top: 0;
 
@@ -93,7 +111,7 @@ header {
     -o-transition: 0.2s ease;
     transition: 0.2s ease;
     background-color: whitesmoke;
-    color: transparent;
+    color: #99979E;
     font-weight: 500;
 }
 .ghost-btn:focus {
@@ -158,13 +176,41 @@ header {
 }
 .shoppr-banner {
     /* <------ */
-    background: url(../images/shoppr-banner.jpg) no-repeat fixed center center;
-    background-size: cover;
-    width: 100%;
+    background: url(../images/muvr-banner.jpg) no-repeat fixed center center;
     height: 100vh;
+
+    background-size : cover;
     /*width:100%;
 
     position:relative;
     height:100vh;*/
 
+}
+
+#section-overview {
+    background : whitesmoke;
+    height: 1200px;
+    text-align : center;
+    padding-top: 65px;
+}
+
+.overview-card {
+    margin-top:20px;
+    background:transparent;
+    border-style: solid;
+    border-color: #ddd;
+    border-width:thin;
+    width:100%;
+    height:250px;
+    display:block;
+    padding:20px;
+    /*font-family: Roboto; */
+
+}
+.about-text {
+    margin:-15px auto 0px auto;
+}
+
+.navbar-toggle {
+    margin-top: 25px;
 }
