--- a/css/default.css
+++ b/css/default.css
@@ -1,14 +1,15 @@
+@font-face {
+    font-family: ProximaNovaReg;
+    src: url("../fonts/ProximaNova-Regular.otf") format("opentype");
+
+}
+
 header {
     z-index: 1;
     transition : 0.5s;
+    font-family : ProximaNovaReg;
+    letter-spacing : 1px;
 
-}
-.navbar-default .navbar-nav>li>a {
-    color: whitesmoke;
-}
-
-.navbar-default .navbar-nav>li>div>button {
-    color: whitesmoke;
 }
 hr {
     border: none;
@@ -18,26 +19,28 @@ hr {
 
 }
 
-body {
-    color: #9CAFC3;
-}
+
 hr.grayscale {
 
     background-color: #9CAFC3;
 
 }
 
-.is-sticky header{
-    background-color : black;
-    transition : 1s;
+body {
+    color: #9CAFC3;
 }
+
+
 .navbar {
     max-height : 65px;
 }
 
-.row {
-    margin-right: 0;
-    margin-left: 0;
+.navbar-default .navbar-nav>li>a {
+    color: whitesmoke;
+}
+
+.navbar-default .navbar-nav>li>div>button {
+    color: whitesmoke;
 }
 .navbar-default {
 
@@ -47,27 +50,27 @@ hr.grayscale {
 .navbar-brand {
     height: auto;
 }
-.container-fluid {
-    padding-right: 20px;
-    padding-left: 20px;
-}
 #top-nav-collapse {
-    padding-top: 15px;
+    padding-top: 10px;
+}
+.is-sticky header>nav>ul>#top-nav-collapse {
+    padding-top : 10px;
+}
+.is-sticky header{
+    background-color : #444444;
+    transition : .5s;
+}
+#navbar-logo {
+    transition: .5s;
 }
 
-#wrapper
-{
-    padding:0;
-}
 
-.section-card
-{
-    text-align:center;
-    padding:0px 0;
-}
+
+
+
 
 .box {
-   /* z-index: 1; */
+    /* z-index: 1; */
 
     width: 100%;
     position: absolute;
@@ -79,17 +82,28 @@ hr.grayscale {
     padding-top: 0;
 
 }
-
-
-.grid-full {
-    width: 100%;
-    float: left;
+.row {
+    margin-right: 0;
+    margin-left: 0;
 }
+
+.container-fluid {
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+.section-card
+{
+    text-align:center;
+    padding:0px 0;
+}
+
+
 
 .ghost-btn {
     display: inline-block;
     text-decoration: none;
-    border: 3px solid whitesmoke;
+    border: 2px solid whitesmoke;
 
     height: 15px;
     width: 65px;
@@ -116,6 +130,9 @@ hr.grayscale {
     -webkit-backface-visibility: hidden;
     position: relative;
     text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 700;
+
 /*
     letter-spacing:1px;
     font-size: 1.2em;
@@ -127,8 +144,11 @@ hr.grayscale {
     -o-transition: 0.2s ease;
     transition: 0.2s ease;
     background-color: whitesmoke;
-    color: #99979E;
-    font-weight: 500;
+    font-weight: 700;
+}
+button#nav-sign-up:hover {
+    color: #444444;
+    font-weight: 700;
 }
 .ghost-btn:focus {
     outline: none;
@@ -192,9 +212,8 @@ hr.grayscale {
 }
 .shoppr-banner {
     /* <------ */
-    background: url(../images/muvr-banner.jpg) no-repeat fixed center center;
+    /*background: url(../images/shoppr-banner.jpg) no-repeat fixed center center;*/
     height: 100vh;
-
     background-size : cover;
     /*width:100%;
 
@@ -220,7 +239,9 @@ hr.grayscale {
     height:250px;
     display:block;
     padding:20px;
-    /*font-family: Roboto; */
+    font-family: ProximaNovaReg;
+    font-weight: 900;
+    letter-spacing : 1px;
 
 }
 .about-text {
