--- a/css/default.css
+++ b/css/default.css
@@ -1,7 +1,14 @@
 @font-face {
     font-family: ProximaNovaReg;
     src: url("../fonts/ProximaNova-Regular.otf") format("opentype");
-
+}
+@font-face {
+    font-family: ProximaNovaSemiBold;
+    src: url("../fonts/ProximaNova-Semibold.otf") format("opentype");
+}
+@font-face {
+    font-family: ProximaNovaBold;
+    src: url("../fonts/ProximaNova-Bold.otf") format("opentype");
 }
 
 header {
@@ -16,19 +23,20 @@ hr {
     height: 3px;
     width: 80px;
     background-color: black;
+    margin-bottom : 0;
 
 }
 
 
 hr.grayscale {
 
-    background-color: #9CAFC3;
+    background-color: #516880;
 
 }
 
 body {
     color: #516880;
-    font-family: ProximaNovaReg;
+    font-family: ProximaNovaSemiBold;
 }
 
 
@@ -91,6 +99,17 @@ body {
 #navbar-logo {
     transition: .5s;
 }
+.navbar-toggle {
+    border : 2px solid transparent;
+}
+.navbar-toggle .icon-bar {
+    width :25px;
+    height : 3px;
+    background-color: #516880;
+}
+.navbar-default .navbar-toggle .icon-bar {
+    background-color : whitesmoke;
+}
 
 
 
@@ -118,12 +137,6 @@ body {
 .container-fluid {
     padding-right: 20px;
     padding-left: 20px;
-}
-
-.section-card
-{
-    text-align:center;
-    padding:0px 0;
 }
 
 
@@ -245,7 +258,7 @@ button#nav-sign-up:hover {
 
 #section-overview {
     background : whitesmoke;
-    height: 1200px;
+    height: 1000px;
     text-align : center;
     padding-top: 65px;
 }
@@ -253,14 +266,10 @@ button#nav-sign-up:hover {
 .overview-card {
     margin-top:20px;
     background:transparent;
-    border-style: solid;
-    border-color: #ddd;
-    border-width:thin;
+    border: thin solid transparent;
     width:100%;
-    height:250px;
     display:block;
     padding:20px;
-    font-family: ProximaNovaReg;
     font-weight: 900        ;
     letter-spacing : 1px;
 
@@ -270,7 +279,7 @@ button#nav-sign-up:hover {
 }
 
 .navbar-toggle {
-    margin-top: 25px;
+    margin-top: 15px;
 }
 
 #banner-carousel h1{
@@ -369,4 +378,42 @@ button#sign-up-as-muvr:hover {
 }
 button#sign-up-as-muvr:focus {
     outline: none;
+}
+
+
+.owl-theme .owl-controls .owl-buttons div {
+    position: absolute;
+    width: 50px;
+}
+
+.owl-theme .owl-controls .owl-buttons .owl-prev{
+
+    left: 15px;
+    top: 325px;
+}
+
+.owl-theme .owl-controls .owl-buttons .owl-next{
+    right: 15px;
+    top: 325px;
+}
+
+#section-team{
+    background : whitesmoke;
+    height: 1000px;
+    text-align : center;
+    padding-top: 65px;
+}
+
+#section-team .row {
+    padding-left: 150px;
+    padding-right : 150px;
+}
+.row .col-md-2 .overview-card .about-text img{
+    width: 150px
+}
+
+#team-pictures{
+
+    padding-left : 50px;
+    padding-right : 50px;
 }
