--- a/js/owl-carousel/owl.theme.css
+++ b/js/owl-carousel/owl.theme.css
@@ -24,7 +24,7 @@
 	background: #869791;
 	filter: Alpha(Opacity=50);/*IE7 fix*/
 	opacity: 0.5;
-	left: -45px;
+	/*left: -45px;*/
 }
 /* Clickable class fix problem with hover on touch devices */
 /* Use it for non-touch hover action */
