--- a/css/default.css
+++ b/css/default.css
@@ -145,7 +145,6 @@ button#nav-sign-up {
     display: inline-block;
     text-decoration: none;
     border: 2px solid whitesmoke;
-
     height: 15px;
     width: 65px;
     line-height: 36px;
@@ -258,7 +257,7 @@ button#nav-sign-up:hover {
 
 #section-overview {
     background : whitesmoke;
-    height: 1000px;
+    min-height: 600px;
     text-align : center;
     padding-top: 65px;
 }
@@ -399,9 +398,10 @@ button#sign-up-as-muvr:focus {
 
 #section-team{
     background : whitesmoke;
-    height: 1000px;
+    min-height: 600px;
     text-align : center;
     padding-top: 65px;
+    margin-top : -10px;
 }
 
 #section-team .row {
@@ -413,7 +413,91 @@ button#sign-up-as-muvr:focus {
 }
 
 #team-pictures{
-
     padding-left : 50px;
     padding-right : 50px;
 }
+
+@media (min-width: 768px) {
+    .seven-cols .col-md-1,
+    .seven-cols .col-sm-1,
+    .seven-cols .col-lg-1  {
+        width: 100%;
+    }
+}
+
+@media (min-width: 992px) {
+    .seven-cols .col-md-1,
+    .seven-cols .col-sm-1,
+    .seven-cols .col-lg-1 {
+        width: 14.285714285714285714285714285714%;
+    }
+}
+
+@media (min-width: 1200px) {
+    .seven-cols .col-md-1,
+    .seven-cols .col-sm-1,
+    .seven-cols .col-lg-1 {
+        width: 14.285714285714285714285714285714%;
+    }
+}
+
+.col-centered{
+    margin: 0px;
+    padding: 0px;
+}
+
+.img-circle {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+}
+
+#section-how-it-works{
+    background : #F1F0F0;
+    min-height: 600px;
+    text-align : center;
+    padding-top: 65px;
+}
+.how-it-work-buttons {
+    display: inline-block;
+    width: 170px;
+    height: 33px;
+
+    font-size: 1em;
+    border: 3px solid #516880;
+    color: #FFFFFF;
+    background: #516880;
+    transition: all 0.2s ease-out;
+}
+
+#how-it-works-shoppr {
+    margin-right :-4px;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+}
+#how-it-works-muvr {
+    margin-right :-4px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius : 3px;
+    background: transparent;
+    color: #516880;
+}
+
+.how-it-works-list {
+    text-align : left;
+    font-size : 1.4em;
+    transition: 1s ease-out;
+}
+
+.how-it-works-container {
+    margin-right: auto;
+    margin-left : auto;
+    padding-left : 320px;
+    margin-top: 20px;
+
+}
+
+#how-it-works-muvr-list{
+    display : none;
+}
+
