--- a/css/default.css
+++ b/css/default.css
@@ -501,3 +501,20 @@ button#sign-up-as-muvr:focus {
     display : none;
 }
 
+
+#section-get-in-touch{
+    background : #F3F5F8;
+    min-height: 600px;
+    text-align : center;
+    padding-top: 65px;
+}
+
+#section-get-in-touch h3 {
+    margin-bottom: -5px;
+}
+
+button #get-started {
+    background: transparent;
+    color: #516880;
+    position: absolute;
+}
