--- a/css/default.css
+++ b/css/default.css
@@ -27,6 +27,11 @@ hr {
 
 }
 
+#header-container {
+    padding-left : 20px;
+    padding-right : 20px;
+    width : 100vw;
+}
 
 hr.grayscale {
 
@@ -494,6 +499,7 @@ button#sign-up-as-muvr:focus {
     margin-left : auto;
     padding-left : 320px;
     margin-top: 20px;
+    height: 250px;
 
 }
 
@@ -517,4 +523,18 @@ button #get-started {
     background: transparent;
     color: #516880;
     position: absolute;
+}
+
+.shoppr-header {
+
+}
+
+.muvr-header {
+    display : none;
+}
+
+@media(min-width: 550px) and (max-width: 800px) {
+    .how-it-works-container {
+        padding-left : 90px;
+    }
 }
